<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>forbal_controllers</name>
  <version>0.0.0</version>
  <description>Controllers for high-level motion planning in cartesian space of the force balanced manipulator.</description>
  <maintainer email="yjvyas@gmail.com">Yash Vyas</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_actions</depend>
  <depend>rclcpp_components</depend>
  <depend>builtin_interfaces</depend>
  <depend>robot_state_publisher</depend>
  <depend>forbal_interfaces</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>xacro</depend>
  <depend>urdf</depend>
  <depend>rviz2</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
